--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,56 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
 
+:root {
+  --primary-color: #0f7;
+  --secundary-color: #efffef;
+  --tertiary-color: #010;
+}
+
 body {
-  background: black;
-  color: white;
+  font-size: 2.5vmin;
   font-family: "Roboto Mono", sans-serif;
+  background-color: var(--tertiary-color);
+  color: var(--secundary-color);
+  height: 100vh;
+  margin: 0 2em;
   display: flex;
-  height: 50vh;
-  align-items: center;
-  justify-content: space-between;
   flex-direction: column;
+  justify-content: space-between;
+  transition: all 0.5s;
+}
+
+button {
+  background-color: transparent;
+  border: 0.1em solid var(--primary-color);
+  color: var(--primary-color);
+  padding: 0.3em 2em;
+  border-radius: 0.12em;
+  transition: all 0.5s;
+  font-size: inherit;
+  font-family: inherit;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+h1 {
+  color: var(--primary-color);
+}
+
+button:not([disabled]):hover {
+  background-color: var(--primary-color);
+  color: var(--tertiary-color);
+  cursor: pointer;
+}
+
+button:disabled {
+  border: 0.1em solid var(--secundary-color);
+  color: var(--secundary-color);
+}
+
+.btn-small {
+  padding: 0 0.5em;
 }
